fixing page content alignment (#70)
thanks :)

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 
 .content{
     text-align: center;
-    width:95%;
+    width: 100%;
 }
 
 h1 {
